# MersenneTwister

./: .gitignore  CMakeLists.txt  README.md
src/: kolmogorov.cpp  kolmogorov.hpp  main.cpp
